cluster/default/paperless-ngx/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-app
  namespace: default
spec:
  selector:
    matchLabels:
      app: paperless-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: paperless-app
    spec:
      containers:
        - name: paperless-app
          image: ghcr.io/paperless-ngx/paperless-ngx:latest
          resources:
            limits:
              memory: "4Gi"
              cpu: "4"
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: paperless-app-vol
              mountPath: /usr/src/paperless/data
              subPath: data
            - name: paperless-app-vol
              mountPath: /usr/src/paperless/media
              subPath: media
            - name: paperless-app-vol
              mountPath: /usr/src/paperless/export
              subPath: export
            - name: paperless-ingest-vol
              mountPath: /usr/src/paperless/consume
              subPath: consume
      volumes:
        - name: paperless-app-vol
          persistentVolumeClaim:
            claimName: paperless-app-pvc
        - name: paperless-ingest-vol
          persistentVolumeClaim:
            claimName: paperless-ingest-pvc
