cluster/default/paperless-ngx/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-app-svc
spec:
  selector:
    app: paperless-app
  ports:
  - port: 8000
    targetPort: 8000
