cluster/default/paperless-ngx/gotenberg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-gotenberg-svc
  namespace: default
spec:
  selector:
    app: paperless-gotenberg
  ports:
    - port: 3000
      targetPort: 3000
