cluster/default/paperless-ngx/ingest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ingest-service
spec:
  selector:
    app: paperless-ingest
  ports:
    - port: 22
      targetPort: 22
