cluster/default/paperless-ngx/tikia-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-tika-svc
  namespace: default
spec:
  selector:
    app: paperless-tika
  ports:
    - port: 9998
      targetPort: 9998
