cluster/default/paperless-ngx/ingest-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: paperless-ingest-ingress-route
spec:
  entryPoints:
    - sftp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: paperless-ingest-svc
          port: 2222
